--- a/style.css
+++ b/style.css
@@ -38,6 +38,66 @@ body{
     font-size: 30px;
 }
 
+#output-text{
+    width: 250px;
+    height: 120px;
+    float: left;
+}
+
+#microphone{
+    height: 30px;
+    width: 30px;
+    float: right;
+    background-image: url(microphone.jpg);
+    background-size: 100% 100%;
+    border-radius: 50%;
+    margin-right: 55px;
+    margin-top: -60px;
+    animation: microphone-animation 1.5s infinite;
+}
+.record{
+    animation: microphone-animation 1.5s infinite;
+}
+
+@keyframes microphone-animation{
+    0%{
+        transform: scale(0.9);
+    }
+    70%{
+        transform: scale(1);
+        box-shadow: 0 0 0 10px rgba(0,148, 255, 0.4);
+    }
+    100%{
+        transform: scale(0.9);
+        box-shadow: 0 0 0 0 rgba(0,148, 255, 0);
+    }
+}
+
+.tooltip{
+    width: 200px;
+    font-size: 10px;
+    position: absolute;
+    background-color: rgb(167, 164, 164);
+    color: black;
+    padding: 10px;
+    top: 55px;
+    transform: translateX(300px);
+    border-radius: 5px;
+    visibility: hidden;
+}
+.tooltip:before{
+    content: '';
+    position: absolute;
+    border-width: 15px;
+    border-style: solid;
+    border-color: transparent rgb(167, 164, 164) transparent transparent;
+    left: 0;
+    margin-left: -25px;
+}
+#output-microphone:hover .tooltip{
+    visibility: visible;
+}
+
 #keyboard{
     height: 400px;
 }
